--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "front",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Test front part of the restoration Web application",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "build-prod": "ng build --prod",
+    "test": "ng test --browsers=ChromeHeadless --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "private": true,
+  "author": "Mattis Beguin",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BeguinMattis/Test-restoration-front.git"
+  },
   "dependencies": {
     "@angular/animations": "~7.2.0",
     "@angular/common": "~7.2.0",
