--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - npm install
 cache:
   directories:
-    - "./node_modules"
+    - "/node_modules"
 script:
   - npm run lint
   - npm run test
