--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Test front part of the restoration Web application",
   "scripts": {
     "ng": "ng",
+    "start-dev": "ng serve",
     "start": "node server.js",
     "build": "ng build",
     "test": "ng test --browsers=ChromeHeadless --watch=false",
