--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm": "6.x"
   },
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "~7.2.0",
     "@angular/cli": "~7.2.3",
     "@angular/common": "~7.2.0",
