--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@types/googlemaps": "^3.30.18",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "path": "^0.12.7",
