--- a/angular.json
+++ b/angular.json
@@ -57,9 +57,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Front:build",
-            "ssl": true,
-            "port": 4200
+            "browserTarget": "Front:build"
           },
           "configurations": {
             "production": {
