--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@types/googlemaps": "^3.30.18",
+    "angularx-social-login": "^1.2.6",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "path": "^0.12.7",
